--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: RPass
 logo: /assets/img/logo.png
-description: flowing
+description: transformation is the key
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
