--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: RPass
 logo: /assets/img/logo.png
 description: transformation is the key
 show_downloads: true
-google_analytics:
+google_analytics: G-H1EY97H2S4
 theme: jekyll-theme-minimal
 plugins:
   - jekyll-seo-tag
