--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: RPass
 logo: /assets/img/logo.png
-description: transformation is the key
+description: Let us keep the balance 
 show_downloads: true
 google_analytics: G-H1EY97H2S4
 theme: jekyll-theme-minimal
