--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,13 @@
 title: RPass
 logo: /assets/img/logo.png
-description: Let us keep the balance 
+description: Let us keep the balance
 show_downloads: true
 google_analytics: G-H1EY97H2S4
 theme: jekyll-theme-minimal
 plugins:
   - jekyll-seo-tag
+
+
+
+imagesurl: "/assets/img_gal/"
+thumbsurl: "/assets/thumbs/"
